--- a/Projeto-3- Responsive Homepage/css/style.css
+++ b/Projeto-3- Responsive Homepage/css/style.css
@@ -434,6 +434,29 @@ footer .copyrights-text {
   header {
     height: 70px;
   }
+
+  .hero-content h1 {
+    font-size: 44px;
+    letter-spacing: 1.1px;
+    line-height: 50px;
+    margin-bottom: 12px;
+  }
+  
+  .hero-content p {
+    max-width: 512px;
+    font-size: 18px;
+    letter-spacing: 0.45px;
+    line-height: 26px; /* 140% */
+    margin-bottom: 12px;
+  }
+  
+  .hero-content button {
+    font-size: 16px;
+    letter-spacing: 0.4px;
+    line-height: 21px;
+
+  }
+
 }
 /*end of small desktops*/
 
@@ -459,6 +482,27 @@ footer .copyrights-text {
     display: inline-block;
     font-size: 24px;
   }
+
+  .hero-content h1 {
+    font-size: 40px;
+    line-height: 46px;
+    letter-spacing: 1px;
+  }
+  
+  .hero-content p {
+    font-size: 16px;
+    line-height: 24px; /* 140% */
+    letter-spacing: 24px;
+  }
+  
+  .hero-content button {
+    font-size: 14px;
+    letter-spacing: 0.35px;
+    line-height: 21px;
+    width: 196px;
+
+  }
+
 }
 
 /*end of tablets*/
@@ -476,6 +520,32 @@ footer .copyrights-text {
   header .logo .blue-dot {
     width: 8px;
     height: 8px;
+  }
+
+  .hero-content {
+    position: static;
+  }
+
+  .hero-content h1 {
+    color: #000;
+    font-size: 32px;
+    letter-spacing: 0.8px;
+    line-height: 38px;
+    text-align: center;
+    margin-bottom: 32px;
+    margin-top: 27px;
+  }
+  
+  .hero-content p {
+    display: none;
+  }
+  
+  .hero-content button {
+    font-size: 14px;
+    line-height: 21px;
+    width: 196px;
+    margin: auto; /*centralizando botão*/
+
   }
   
 }
