--- a/Projeto-3- Responsive Homepage/css/style.css
+++ b/Projeto-3- Responsive Homepage/css/style.css
@@ -60,12 +60,11 @@ header nav ul li.menu_icon {
   display: none;
 }
 
-header nav ul li.menu_icon img{
+header nav ul li.menu_icon img {
   vertical-align: middle;
   width: 24px;
   height: auto;
 }
-
 
 header nav ul li a {
   color: #3e3e3e;
@@ -441,7 +440,7 @@ footer .copyrights-text {
     line-height: 50px;
     margin-bottom: 12px;
   }
-  
+
   .hero-content p {
     max-width: 512px;
     font-size: 18px;
@@ -449,14 +448,125 @@ footer .copyrights-text {
     line-height: 26px; /* 140% */
     margin-bottom: 12px;
   }
-  
+
   .hero-content button {
     font-size: 16px;
     letter-spacing: 0.4px;
     line-height: 21px;
-
   }
 
+  section.best-sellers {
+    padding-top: 70px;
+  }
+
+  section.best-sellers h2 {
+    line-height: 38px;
+    margin: 0 0 16px 0;
+  }
+
+  section.best-sellers .product-slider {
+    margin-top: 70px;
+  }
+
+  section.best-sellers .product-slider .product .product-info .categories {
+    font-size: 12px;
+    letter-spacing: 0.3px;
+    line-height: 30px;
+  }
+
+  section.best-sellers .product-slider .product .product-info .title {
+    font-size: 16px;
+    letter-spacing: 0.5px;
+    line-height: 26px;
+  }
+
+  section.best-sellers .product-slider .product .product-info .price {
+    font-size: 24px;
+    font-weight: 700;
+    letter-spacing: 0.6px;
+    margin-bottom: 12px;
+  }
+
+  section.best-sellers
+    .product-slider
+    .product
+    .product-info
+    .price
+    .original-price {
+    font-size: 14px;
+    letter-spacing: 0.35px;
+    line-height: 30px;
+    display: block;
+    line-height: 16px;
+  }
+
+  section.best-sellers .product-slider .product .product-info button {
+    height: 40px;
+    width: 180px;
+    letter-spacing: 0.35px;
+    line-height: 21px;
+  }
+
+  section.newsletter {
+    width: 881px;
+    max-width: 100%;
+    padding: 50px 0;
+    margin: 70px auto;
+  }
+
+  section.newsletter h3 {
+    font-size: 22px;
+    letter-spacing: 0.55px;
+    line-height: 42px;
+  }
+
+  section.newsletter p {
+    font-size: 14px;
+    letter-spacing: 0.35px;
+    line-height: 42px;
+    margin-bottom: 15px;
+  }
+
+  section.newsletter form input {
+    font-size: 12px;
+    letter-spacing: 0.3px;
+    line-height: 18px;
+  }
+
+  section.newsletter form button {
+    font-size: 12px;
+    letter-spacing: 0.3px;
+    line-height: 18px;
+  }
+
+  footer .bottom-nav {
+    padding: 50px 0;
+  }
+
+  footer .bottom-nav .container {
+    max-width: 90%;
+  }
+
+  footer .bottom-nav ul li a {
+    font-size: 14px;
+    letter-spacing: 0.35px;
+    line-height: 22px;
+  }
+
+  footer .bottom-nav ul li.list-title {
+    font-size: 16px;
+    letter-spacing: 0.5px;
+    line-height: 26px;
+    margin-bottom: 12px;
+  }
+
+  footer .copyright-text {
+    height: 50px;
+    font-size: 14px;
+    letter-spacing: 0.35px;
+    line-height: 22px;
+    text-align: center;
+  }
 }
 /*end of small desktops*/
 
@@ -467,59 +577,158 @@ footer .copyrights-text {
   }
 
   header .logo {
-    font-size: 27px;
+    font-size: 24px;
   }
 
   header nav ul li {
-    display: none; /*ocultar menu escritos*/
-  }
-  
-  header nav ul li.menu_icon {
-    display: inline-block; /*mostrar menu hamburger*/
+    display: none;
   }
 
-  header .logo {
+  header nav ul li.menu_icon {
     display: inline-block;
     font-size: 24px;
   }
 
   .hero-content h1 {
     font-size: 40px;
-    line-height: 46px;
     letter-spacing: 1px;
+    line-height: 46px;
   }
-  
+
   .hero-content p {
     font-size: 16px;
-    line-height: 24px; /* 140% */
-    letter-spacing: 24px;
+    letter-spacing: 0.4px;
+    line-height: 24px;
   }
-  
+
   .hero-content button {
     font-size: 14px;
     letter-spacing: 0.35px;
     line-height: 21px;
     width: 196px;
-
   }
 
+  section.best-sellers {
+    padding-top: 50px;
+  }
+
+  section.best-sellers h2 {
+    font-size: 28px;
+    letter-spacing: 0.7px;
+    line-height: 38px;
+    margin: 0 0 12px 0;
+  }
+
+  section.best-sellers .product-slider {
+    margin-top: 48px;
+  }
+
+  section.best-sellers .container {
+    flex-wrap: wrap; /*ajustando posicionamento dos produtos*/
+    justify-content: center;
+  }
+
+  section.best-sellers .product-slider .product {
+    min-width: 220px;
+    margin: 17px 8px;
+  }
+
+  section.best-sellers .product-slider .product .product-info .categories {
+    font-size: 12px;
+    letter-spacing: 0.3px;
+    line-height: 30px;
+    margin-bottom: 5px;
+  }
+
+  section.best-sellers .product-slider .product .product-info .title {
+    font-size: 13px;
+    letter-spacing: 0.5px;
+    line-height: 18px;
+    margin-bottom: 8px;
+  }
+
+  section.best-sellers .product-slider .product .product-info .price {
+    font-size: 16px;
+    letter-spacing: 0.4px;
+    line-height: 30px;
+  }
+
+  section.best-sellers
+    .product-slider
+    .product
+    .product-info
+    .price
+    .original-price {
+    font-size: 9px;
+    letter-spacing: 0.23px;
+    line-height: 30px;
+    display: block;
+    line-height: 14px;
+  }
+
+  section.best-sellers .product-slider .product .product-info button {
+    height: 36px;
+    width: 193px;
+    font-size: 12px;
+    letter-spacing: 0.3px;
+    line-height: 18px;
+  }
+
+  section.best-sellers .product-slider .product.new::before {
+    font-size: 11px;
+    font-weight: 700;
+    letter-spacing: 0.27px;
+    padding: 0px 12px;
+  }
+
+  section.newsletter {
+    width: 100%;
+    max-width: 100%;
+    padding: 50px 0;
+    margin: 50px auto;
+  }
+
+  section.newsletter h3 {
+    font-size: 22px;
+    letter-spacing: 0.55px;
+    line-height: 42px;
+  }
+
+  section.newsletter p {
+    font-size: 14px;
+    letter-spacing: 0.35px;
+    line-height: 42px;
+  }
+
+  footer .bottom-nav {
+    padding: 50px 0;
+  }
+
+  footer .bottom-nav .container {
+    max-width: 90%;
+  }
 }
 
 /*end of tablets*/
 
 /*from mobile phones*/
 @media screen and (max-width: 576px) {
-  .container {
-    max-width: 92%;
-  }
-
   header .logo {
     font-size: 18px;
   }
 
+  header nav ul li {
+    display: none;
+  }
+
+  header nav ul li.menu_icon {
+    display: inline-block;
+    font-size: 24px;
+  }
+
   header .logo .blue-dot {
-    width: 8px;
-    height: 8px;
+    width: 7px;
+    height: 7px;
   }
 
   .hero-content {
@@ -535,19 +744,83 @@ footer .copyrights-text {
     margin-bottom: 32px;
     margin-top: 27px;
   }
-  
+
   .hero-content p {
     display: none;
   }
-  
+
   .hero-content button {
     font-size: 14px;
+    letter-spacing: 0.35px;
     line-height: 21px;
     width: 196px;
-    margin: auto; /*centralizando botão*/
-
+    margin: auto;
   }
-  
+
+  section.best-sellers {
+    padding-top: 64px;
+  }
+
+  section.best-sellers .product-slider .product{
+    width: 82%;
+    max-width: 360px;
+  }
+
+  section.best-sellers h2 {
+    font-size: 24px;
+    letter-spacing: 0.6px;
+    line-height: 38px;
+    margin: 0 0 14px 0;
+  }
+
+  section.best-sellers hr {
+    border-top: 4px solid #67f11d;
+    width: 40px;
+  }
+
+  section.best-sellers .product-slider {
+    margin-top: 42px;
+  }
+
+  section.best-sellers .product-slider .product .product-info .categories {
+    margin-bottom: 7px;
+  }
+
+  section.best-sellers .product-slider .product .product-info .title {
+    font-size: 14px;
+    letter-spacing: 0.54px;
+    line-height: 18px;
+  }
+
+  section.best-sellers .product-slider .product .product-info .price {
+    font-size: 20px;
+    font-weight: 700;
+    letter-spacing: 0.5px;
+  }
+
+  section.best-sellers
+    .product-slider
+    .product
+    .product-info
+    .price
+    .original-price {
+    font-size: 11px;
+    letter-spacing: 0.28px;
+    line-height: 20px;
+  }
+
+  section.best-sellers .product-slider .product .product-info button {
+    height: 36px;
+    width: 146px;
+    font-size: 12px;
+    letter-spacing: 0.3px;
+    line-height: 18px;
+  }
+
+  section.newsletter {
+    padding: 44px 0;
+    margin: 100px auto;
+  }
 }
 
 /*end of mobile*/
