--- a/Projeto-3- Responsive Homepage/css/style.css
+++ b/Projeto-3- Responsive Homepage/css/style.css
@@ -37,6 +37,10 @@ header .logo {
   display: inline-block;
   font-size: 27px;
 }
+header .logo a {
+  text-decoration: none;
+  color: #000;
+}
 
 header .logo .blue-dot {
   background-color: #3e50e5;
